# airflow_foodcenter

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  uninstall_all.py
.astro/: config.yaml
.github/workflow/: main.yml
.streamlit/: config.toml
Scripts/: activate  activate.bat
app/: Revenue_by_Segments.py  Revenue_by_States.py  Top_20_drivers.py  backend.py  main.py  tasks.py
dags/: etldag copy.py  etldag.py  top20dag.py
include/: export_to_postgre_pandas.py  export_to_postgre_polars.py  extract_with_gdown.py  extract_with_google_api.py  from_postgre_to_bigquery.py  infer_schema.py  main.py  pipe_func.py  pipeline_func.py  posgres_raw copy.py  posgres_raw.py  session.py
include/frontend/: dashboard.py
include/infered_schema/: schema_channels.py  schema_deliveries.py  schema_drives.py  schema_hubs.py  schema_orders.py  schema_payments.py  schema_stores.py  schemas.py
include/sql/: creating.sql  cte_top20.sql  materialized_views.sql  rank_view.sql  refresh.sql  refresh_mvs.sql  silver.sql
notebooks/: eda.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
