[tool.poetry]
name = "airflow-foodcenter"
version = "0.1.0"
description = ""
authors = ["Thomás Freire <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "<2"
pandera = "0.18.3"
psycopg2-binary = "2.9.9"
pyarrow = "*"
python-dotenv = "<2.0"
pandas-datareader = "0.10.0"

streamlit = "^1.34.0"
altair = "^5.3.0"
streamlit-option-menu = "^0.3.12"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "streamlit run app/main.py"
kill = "kill -9 $(lsof -t -i :8501)"